fix(uishell): update header overflow action button styles (#914)
* fix(uishell): update header overflow action button styles

* chore: css lint fix

* chore: lint fix

* fix: lint

* fix: turn on background and border for menubutton

--- a/packages/react/src/components/UIShell/components/styles/_header-divider.scss
+++ b/packages/react/src/components/UIShell/components/styles/_header-divider.scss
@@ -14,4 +14,5 @@ $prefix: 'cds' !default;
   background: $border-subtle;
   block-size: convert.to-rem(24px);
   inline-size: 1px;
+  margin-inline: -1px;
 }
