--- a/packages/react/src/components/UIShell/components/styles/_header.scss
+++ b/packages/react/src/components/UIShell/components/styles/_header.scss
@@ -10,6 +10,7 @@
 @use '@carbon/react/scss/motion' as *;
 @use '@carbon/react/scss/utilities/convert' as convert;
 @use '@carbon/react/scss/utilities/custom-property' as custom-property;
+@use '@carbon/react/scss/utilities/z-index' as *;
 @use '@carbon/react/scss/breakpoint' as *;
 
 $prefix: 'cds' !default;
@@ -48,7 +49,18 @@ $prefix: 'cds' !default;
 
 .#{$prefix}--header-action.#{$prefix}--popover--open
   .#{$prefix}--header-action__button {
-  background-color: $layer;
+  z-index: z('header') + 2;
+  background-color: $background;
+  border-inline-end: 1px solid $border-subtle;
+  border-inline-start: 1px solid $border-subtle;
+}
+
+.#{$prefix}--header-action.#{$prefix}--popover--border
+  > .#{$prefix}--popover
+  > .#{$prefix}--popover-content {
+  border: 1px solid $border-subtle;
+  border-block-start: none;
+  outline: none;
 }
 
 .#{$prefix}--popover--border.#{$prefix}--header-action
